# c-resource-leak-checker

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  annotation_tester.py  check_formatting.py  format_code.py  format_python_code.py  read_ast.py  run_all.py  run_all.sh  run_at.py  run_pt.py  run_test.py  run_test.sh  run_wa.py  run_wp.py  test.txt  whole_test_run.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
ASTAnalyses/ASTInfo/: Debug.py  ToASTInfo.py  ast_info_fmt_specifier.py  ast_info_tokens.py  generator.py  reader.py
ASTAnalyses/ASTPasses/: get_ast_info_from_args.py
ASTInfoGenerator/: Debug.py  ast_info_generator.py
ASTInfoGenerator/AnnoStructure/: Annotation.py  AnnotationManager.py
ASTInfoGenerator/DeclParser/: DeclParser.py  DeclType.py
ASTInfoGenerator/Specifiers/: Specifier.py  SpecifierManager.py
ASTInfoGenerator/StructVariables/: StructVar.py  StructVarManager.py
Annotations/: Annotations.h  annoGen.py  annotation_generator.py
Functions/: safe.txt
TestHelpers/: struct_field_to_index_map_generator.py
TestRunners/: Flag.py  FlagsManager.py  TestFile.py  TestFilesManager.py  TestResult.py  TestRunner.py  Utils.py
TestRunners/AnnotationTestRunner/: AnnotationTestFile.py  AnnotationTestFileManager.py  AnnotationTestFilesManager.py  AnnotationTestRunner.py  run_test.py
TestRunners/PassTestRunner/: Flag.py  FlagsManager.py  PassTestFile.py  PassTestFilesManager.py  PassTestRunner.py  TestFile.py  TestFilesManager.py  TestResult.py  run_test.py
Testers/Passes/: test18_TO_UPDATE.txt  test8_TO_UPDATE.txt
include/: Annotation.h  AnnotationHandler.h  BranchListerTester.h  CFG.h  CalledMethods.h  Constants.h  DataflowPass.h  Debug.h  DisjointedSetWrapper.h  DisjointedSets.h  Domain.h  ErrorAnnotation.h  FunctionAnnotation.h  FunctionInfo.h  FunctionInfoTester.h  FunctionInfosManager.h  LineNumberToLValueMap.h  LineNumberToLValueTester.h  MustCall.h  ParameterAnnotation.h  PassType.h  ProgramVariable.h  ProgramVariablesHandler.h  ReturnAnnotation.h  RunAnalysis.h  StructAnnotation.h  StructFieldToIndexMap.h  StructFieldToIndexTester.h  TempFileManager.h  TestRunner.h  Tree.h  Utils.h  loadFunctions.h
include/Annotations/: Annotation.h  AnnotationHandler.h  ErrorAnnotation.h  FunctionAnnotation.h  ParameterAnnotation.h  ReturnAnnotation.h  StructAnnotation.h
include/ProgramRepresentation/: DisjointPVAliasSets.h  DisjointedPVAliasSets.h  FullFile.h  FullProgram.h  MethodsSet.h  PVAliasSet.h  ProgramBlock.h  ProgramFunction.h  ProgramPoint.h  ProgramVariable.h
include/UtilFunctionTesters/: UtilFunctionTester.h
src/: Analysis.cpp  Annotation.cpp  AnnotationHandler.cpp  BranchListerTester.cpp  CFG.cpp  CalledMethods.cpp  DataflowPass.cpp  DisjointedSetWrapper.cpp  DisjointedSets.cpp  Domain.cpp  ErrorAnnotation.cpp  FunctionAnnotation.cpp  FunctionInfo.cpp  FunctionInfoTester.cpp  FunctionInfosManager.cpp  LineNumberToLValueMap.cpp  LineNumberToLValueTester.cpp  MustCall.cpp  ParameterAnnotation.cpp  PassType.cpp  PointerAnalysis.cpp  ProgramVariable.cpp  ProgramVariablesHandler.cpp  ReturnAnnotation.cpp  RunAnalysis.cpp  ScopeAnalyzer.cpp  StructAnnotation.cpp  StructFieldToIndexMap.cpp  StructFieldToIndexTester.cpp  TempFileManager.cpp  TestRunner.cpp  Tree.cpp  Utils.cpp  loadFunctions.cpp  tests.txt
src/Annotations/: Annotation.cpp  AnnotationHandler.cpp  ErrorAnnotation.cpp  FunctionAnnotation.cpp  ParameterAnnotation.cpp  ReturnAnnotation.cpp  StructAnnotation.cpp
src/Functions/: memory.txt  test_memory.txt  unsafe.txt
src/ProgramRepresentation/: DisjointPVAliasSets.cpp  DisjointedPVAliasSets.cpp  FullFile.cpp  FullProgram.cpp  MethodsSet.cpp  PVAliasSet.cpp  ProgramBlock.cpp  ProgramFunction.cpp  ProgramPoint.cpp  ProgramVariable.cpp
test/: Makefile  test1.c  test1.ll  test1.txt  test10.c  test10.ll  test10.txt  test10_TO_UPDATE.txt  test11.c  test11.ll  test11.txt  test11_TO_UPDATE.txt  test12.c  test12.ll  test12.txt  test13.c  test13.ll  test13.txt  test14.c  test14.ll  test14.txt  test15.c  test15.ll  test15.txt  test16.c  test16.ll  test17.c  test17.ll  test18.c  test18.ll  test18_TO_UPDATE.txt  test19.c  test19.ll  test2.c  test2.ll  test2.txt  test20.c  test20.ll  test21.c  test21.ll  (+30 more)
test-cases/: CVE-2022-3544  CVE-2022-3544.c  CVE-2022-3544.h  CVE-2022-3544.h.gch  CVE-2022-47941.c  a.out  damon_operations.h  damon_operations.h.gch
test/anno_verify_assignment_test1/: main.c
test/anno_verify_func_test1/: main.c
test/anno_verify_func_test2/: main.c
test/anno_verify_func_test3/: main.c
test/anno_verify_func_test5/: main.c
test/anno_verify_func_test6/: main.c
test/anno_verify_func_test7/: main.c
test/anno_verify_func_test8/: main.c
test/anno_verify_pa_test1/: main.c
test/anno_verify_pa_test2/: main.c
test/anno_verify_test/: main.c
test/anno_verify_test1/: main.c
test/anno_verify_test4/: main.c
test/anno_verify_test7/: main.c
test/branches_test/: main.c
test/byval_test/: bigger_byval.c  call_7.c
test/call_all_small_test/: call_2.c
test/diff_type_struct_ptr/: sanity_check.c  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test__.c
test/double/: index.c  index.ll_clean
test/double_mustcall/: index.c
test/if_lub_gepinst_test/: index.c
test/if_lub_test/: main.c
test/includes_test/: call_structs.c  call_structs.h  call_structs.ll
test/long_struct/: index.c
test/must_call_init_test/: index.c
test/overwrite/: index.c  index.ll_clean
test/owning_assignment/: index.c
test/owning_recurse/: index.c
test/ptr_struct_alloc/: index.c
test/ptr_struct_param/: index.c
test/recover_desugar/: main.c
test/refinement/: index.c  index.ll_clean
test/return_anno/: index.c
test/simple_anno_test/: index.c
test/simple_anno_test2/: index.c
test/simple_anno_test3/: index.c
test/simple_layer_test/: test1.c  test1.ll
test/simple_owning_test/: index.c
test/simple_ptr_test/: index.c
test/struct_diff_field_aliasing_test/: index.c  two_structs.c
test/test10/: test10.c
test/test11/: test11.c
test/test12/: test12.c
test/test13/: test13.c  test13.ll
(+221 files in other folders)
